implement git_tree